# learngit

./: CMakeLists.txt  readme.txt
include/: Student.h  StudentManager.h
src/: Student.cpp  StudentManager.cpp  main.cpp
